Fixed font size being too small on some elements and added some styles

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 	height: 100vh;
 	grid-template-columns: repeat(5, 1fr);
 	grid-template-rows: repeat(6, 1fr);
+	background-color: rgb(240, 240, 240);
 }
 
 .sidebar {
@@ -23,6 +24,7 @@ body {
 	height: 60px;
 	width: 60px;
 	filter: drop-shadow(0px 0px 2px #000);
+	cursor: pointer;
 }
 
 .sidebar span {
@@ -35,11 +37,12 @@ body {
 .icon {
 	height: 30px;
 	width: 30px;
+	cursor: pointer;
 }
 
 .list {
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: 1fr;
 	gap: 10px;
 }
 
@@ -47,7 +50,14 @@ body {
 	display: flex;
 	align-items: center;
 	gap: 2ch;
+	cursor: pointer;
 	font-size: 25px;
+	transition: 0.5s;
+}
+
+.list li:hover {
+	text-decoration: underline;
+	text-shadow: 0px 0px 3px black;
 }
 
 .main {
@@ -88,12 +98,14 @@ body {
 .search img {
 	height: 30px;
 	width: 30px;
+	cursor: pointer;
 }
 
 .profile-img {
 	height: 45px;
 	width: 45px;
 	border-radius: 50%;
+	cursor: pointer;
 }
 
 .profile-icons {
@@ -129,17 +141,23 @@ body {
 .buttons-array {
 	display: flex;
 	gap: 20px;
+	flex-wrap: wrap;
 }
 
 .btns {
 	height: 40px;
 	width: 100px;
 	border-radius: 15px;
-	background-color: turquoise;
+	background-color: rgb(148, 148, 148);
 	color: white;
 	border: none;
 	cursor: pointer;
 	font-weight: 600;
+}
+
+.btns:hover {
+	transform: scale3d(1.02, 1.02, 5);
+	box-shadow: 2px 2px 2px black;
 }
 
 .main-content {
@@ -178,13 +196,12 @@ body {
 	border-left: 10px solid;
 	border-radius: 10px;
 	padding: 12px 8px;
-	font-size: max(1rem);
 	background-color: #ccc;
 	display: grid;
 	grid-template: 1fr 3fr 1fr/1fr 1fr;
 }
 
-.card h3 {
+.card h2 {
 	grid-area: 1 / 1 / 2 / -1;
 }
 
@@ -224,7 +241,7 @@ body {
 }
 
 .a-sections p {
-	font-size: 12px;
+	font-size: 1rem;
 }
 
 .a-sections:nth-child(2) {
